--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
+    .corner{
+        top: -50px;
+    }
+    #pushItDown{
+        height: 27%;
+    }
+    font-family: 'Poppins', sans-serif;
 
 }
