--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -2,4 +2,9 @@ page-contact {
 .palabras{
     font-family: 'Poppins', sans-serif;
 }
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
 }
