--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,7 +2,7 @@ page-home {
     .corner{
         top: -50px;
     }
-    #pushItDown{
+    .pushItDown{
         height: 20%;
     }
     font-family: 'Poppins', sans-serif;
